# CudaEngine

./: .gitignore  CMakeLists.txt  bilateralFilter.cuh  bilateral_kernel.cu  bilateral_kernel.cuh  bmploader.cpp  bpmloader.h  imgui.ini  kernel.cu  kernel.cuh  main.cpp  main.cu  readme.md
Common/: helper_cuda.h  helper_math.h
docs/: README.md  Диаграмма_курсач.drawio
docs/tex/: 01-contents.tex  02-intro.tex  10-analysis.tex  20-design.tex  30-impl.tex  40-research.tex  50-conclusion.tex  51-biblio.bib  51-biblio.tex  preamble.inc.tex
src/: kernel.cu  kernel.cuh  main.cpp  main.cu
src/camera/: camera.cpp  camera.cu  camera.h
src/kernels/inc/: kernel.cuh  matrix.cuh  render.cuh  shader.cuh  shader_impl.cuh  util.cuh
src/kernels/src/: kernel.cu  matrix.cu  render.cu  util.cu
src/model/inc/: bounding_volume.h  model.h  pool.h  texture.cuh
src/model/src/: bounding_volume.cpp  model.cpp  model.cu  pool.cpp  texture.cu
src/render/culler/: culler.cpp  culler.h
src/render/draw_caller/: draw_caller.cpp  draw_caller.h  image_resetter.cpp  image_resetter.h  rasterizer.cu  rasterizer.h  synchronizable.cpp  synchronizable.h  zfiller.cu  zfiller.h  zmerger.h
src/render/image_resetter/: image_resetter.cu  image_resetter.h
src/render/logger/: logger.cpp  logger.h
src/render/misc/: draw_caller_args.cuh  image.cuh  util.cu  util.cuh
src/render/profiling_timer/: profiling_timer.cpp  profiling_timer.h
src/render/scene/: scene.cu  scene.h
src/render/virtual_geometry/analyzer/: mesh_analyzer.cu  mesh_analyzer.h  mesh_analyzer_puppeteer.cpp  mesh_analyzer_puppeteer.h
src/render/virtual_geometry/geometry_upsampler/: geometry_upsampler.cu  geometry_upsampler.h
src/render/virtual_geometry/manager/: virtual_geometry_manager.cpp  virtual_geometry_manger.h
src/render/virtual_geometry/object_manager/: virtual_geometry_object_manager.cpp  virtual_geometry_object_manager.h
src/render/virtual_geometry/virtual_model/: virtual_model.cpp  virtual_model.h
src/render/zbuffer/: zbuffer.cpp  zbuffer.h  zfiller.cu  zfiller.h  zmerger.cu  zmerger.h
src/scene/: predefined_scenes.cpp  predefined_scenes.h  scene.cu  scene.h  scene_loader.cpp  scene_loader.h
src/shader/: all.h  base_shader.cuh  registered_shaders.h  shader_impl.cuh  shader_vgeom.cuh  shader_water.cuh
src/util/: const.cpp  const.h  implot.cpp  implot.h  implot_internal.h  implot_items.cpp  singleton.h  stb_image.cu  stb_image.h  stream_manager.cu  stream_manager.h  tiny_objloader.cpp  tiny_objloader.h
tools/: parse_obj.py  plot_fps.py
